--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".DWIT"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DWIT">
-        <activity android:name=".ChatActivity"></activity>
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".activities.EventDetailsActivity" />
+        <activity android:name=".activities.AddEventActivity" />
+        <activity android:name=".activities.ChatActivity" />
+        <activity android:name=".activities.LoginActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -31,9 +34,9 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".activities.MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".SplashActivity">
+        <activity android:name=".activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
