--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".DWIT"
@@ -17,6 +19,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DWIT">
+        <activity android:name=".activities.SignUpActivity" />
+        <activity android:name=".activities.UserDetailsActivity" />
         <activity android:name=".activities.EventDetailsActivity" />
         <activity android:name=".activities.AddEventActivity" />
         <activity android:name=".activities.ChatActivity" />
