--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/Theme.DWIT">
         <activity android:name=".activities.EventDetailsActivity" />
         <activity android:name=".activities.AddEventActivity" />
-        <activity android:name=".activities.ChatActivity" />
+        <activity android:name=".activities.SplashActivity" />
         <activity android:name=".activities.LoginActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -36,7 +36,7 @@
         <activity
             android:name=".activities.MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".activities.SplashActivity">
+        <activity android:name=".activities.ChatActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
