--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DWIT">
-        <activity android:name=".activities.ChatListActivity"></activity>
+        <activity android:name=".activities.ChatListActivity" />
         <activity android:name=".activities.SignUpActivity" />
         <activity android:name=".activities.UserDetailsActivity" />
         <activity android:name=".activities.EventDetailsActivity" />
         <activity android:name=".activities.AddEventActivity" />
-        <activity android:name=".activities.ChatActivity" />
+        <activity
+            android:name=".activities.ChatActivity"
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".activities.LoginActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
