--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DWIT">
-        <activity android:name=".activities.SettingsActivity"></activity>
+        <activity
+            android:name=".activities.EventsJoinedActivity"/>
+        <activity android:name=".activities.SettingsActivity" />
         <activity android:name=".activities.ChatListActivity" />
         <activity android:name=".activities.SignUpActivity" />
         <activity android:name=".activities.UserDetailsActivity" />
