--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'com.facebook.fresco:fresco:2.3.0'
 
     implementation 'com.sucho:placepicker:1.1.2'
+    implementation 'com.google.android.gms:play-services-ads:19.8.0'
 
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.4.0'
